--- a/Actividad/Actividad.API/appsettings.json
+++ b/Actividad/Actividad.API/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnetion": "Server=FERNANDOFLOREZ;Database=Actividad;Encrypt=false;User Id=sa;Password=Florez#003"
+
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
